--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 /* target the iframe directly */
-#my-studio-container {
+/* #my-studio-container {
 	width: 60%;
     display: inline-block;
 }
@@ -12,8 +12,56 @@
 #upload-section {
 	width: 39%;
     float: right;
-}
+} */
 
 /* #root {
     height: 1000px;
 } */
+.welcome-index {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.welcome-page {
+    width: 400px;
+    height: 175px;
+    background: #e6e5e5;
+    padding: 30px 30px;
+}
+.welcome-text {
+    margin: 0 0 15px;
+}
+.welcome-text strong {
+    font-size: 24px;
+}
+
+.welcome-as ul {
+    padding: 0;
+    margin: 0;
+}
+.welcome-as ul li a {
+    color: #1f6ccd;
+}
+.welcome-as ul li {
+    display: block;
+    font-weight: 500;
+    margin: 6px 0;
+}
+.welcome-as strong {
+    margin: 0 0 10px;
+    display: block;
+}
+.MuxPlayer {
+    width: 80%;
+    margin: 0px auto;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.MuxPlayer mux-player { 
+    width: 100%;
+    height: calc(100vh - 120px);
+}
